--- a/ChangeLog
+++ b/ChangeLog
@@ -1,19 +1,22 @@
+2002-11-14 scizzo <scizzo@gimp.org>
+
+        * tutorials/Basic_Scheme2/: Add the first port of the
+        second scheme tutorial.
+
 2002-11-14 brix <brix@gimp.org>
 
 	* books/index.html: added missing descriptions
 
 2002-11-14 scizzo <scizzo@gimp.org>
 
-<<<<<<< ChangeLog
         * tutorials/index.html: Removed the Python Docbook 
         tutorial (going to be moved to documents section).
-=======
+
         * tutorials/Script_Image/: Add the first port of the
         Working With The Image tutorial. Small fixes in the tags.
 
         * tutorials/index.html: Removed the Python Docbook (going to
         be moved to documents section).
->>>>>>> 1.153
 
 2002-11-13 scizzo <scizzo@gimp.org>
 
