Modified ChangeLog. Add the first port of the creating icons tutorial.
Modified ChangeLog.
Add the first port of the creating icons tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-15 scizzo <scizzo@gimp.org>
+
+        * tutorials/Creating_Icons/: Add the first port of the
+        creating icons tutorial.
+
 2002-11-14 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Scheme2/: Add the first port of the
