--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-11-18 scizzo <scizzo@gimp.org>
+
+        * tutorials/The_Basics/, tutorials/Borders_On_Selections/.
+          tutorials/Quickmask/, tutorials/Red_Eye_Removal/,
+          tutorials/Film_Grain/, tutorials/Changing_Background_Color_1/,
+          tutorials/Changing_Background_Color_2/, tutorials/3d_Logo/,
+          tutorials/Simple_Animations/, tutorials/Golden_Text/:
+          Fixed the filter class for most of the tutorials.
+
 2002-11-15 scizzo <scizzo@gimp.org>
 
         * tutorials/Creating_Icons/: Add the first port of the
