separated the maillists urls into an includes file and added that to maillists.html

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,9 @@
 	* links.html, includes/urls_important.inc, about/index.html:  moved the
     important GIMP urls into an includes file.  
 
+	* links.html, includes/urls_maillists.inc, maillists.html:  separated the
+    maillists urls into an includes file and added that to maillists.html
+
 2002-11-20 carol <carol@gimp.org>
 
 	* links.html: moved some of the clusters around, added a few others
