separated more of the links into includes files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,9 @@
 	* links.html, includes/urls_maillists.inc, maillists.html:  separated the
     maillists urls into an includes file and added that to maillists.html
 
+	* links.html, includes/urls_go-utiltity.inc, includes/urls_go-developer.inc:  
+    separated more of the links into includes files.
+
 2002-11-20 carol <carol@gimp.org>
 
 	* links.html: moved some of the clusters around, added a few others
