changed the url to the scheme documentation

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* docs/scheme_plugin, that i stole from simon budig
 
+	* docs/index.html changed the url to the scheme documentation
+
 2002-11-21 carol <carol@gimp.org>
 
 	* links.html: added some more urls. fixed somethings. reflected these
