--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* docs/index.html changed the url to the scheme documentation
 
+	* about/index.html: moved the items around.
+
 2002-11-21 carol <carol@gimp.org>
 
 	* links.html: added some more urls. fixed somethings. reflected these
