docs/scheme_plugin: got the images for the doc

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,10 @@
 
 	* about/index.html: moved the items around.
 
+	* docs/scheme_plugin: got the images for the doc
+
+	* docs/scheme_plugin: got the images for the doc
+
 2002-11-21 carol <carol@gimp.org>
 
 	* links.html: added some more urls. fixed somethings. reflected these
