removed at the request of the author.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-23 carol <carol@gimp.org>
+
+	* tutorials/Photo_Edit/ND_Filter removed at the request of the author.
+
 2002-11-23 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/*/: Add the copyright as the author wanted it
