--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2002-11-23 carol <carol@gimp.org>
 
-	* tutorials/Photo_Edit/ND_Filter removed at the request of the author.
+	* tutorials/Photo_Edit/ND_Filter: removed at the request of the author.
 
 2002-11-23 scizzo <scizzo@gimp.org>
 
@@ -14,6 +14,8 @@
 
         * team.html: Eric Jeschke to Eric R. Jeschke to make it go
         with the tutorials.
+
+        * tutorials/html/Perlotine/: First port of the perlotine tutorial.
 
 2002-11-22 scizzo <scizzo@gimp.org>
 
