made the Linux Magazine origins more prominent before i contact them ;)

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* tutorials/Photo_Edit/ND_Filter: removed at the request of the author.
 
+	* tutorials/Basic_Scheme2/index.html: made the Linux Magazine origins more
+    prominent before i contact them ;)
+
 2002-11-23 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/*/: Add the copyright as the author wanted it
