added this file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-24 carol <carol@gimp.org>
+
+	* about/splash.html: added this file.
+
 2002-11-24 scizzo <scizzo@gimp.org>
 
         * tutorials/index.html: Fixed the index for the tutorials in the HTML
