more image name fixing and some cosmetics.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
 
 	* about/splash.html: brix helped me to see the error in the image names.
 
+	* about/splash.html: more image name fixing and some cosmetics.
+
 2002-11-24 carol <carol@gimp.org>
 
 	* about/splash.html: added this file.
