--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-11-26 carol <carol@gimp.org>
+
+	* about/splash.html, about/splash/*.png: i removed these
+
+	* about/splash-1.1.html, about/splash-1.3.html,*.png, about/splash-cvs.html,
+    about/splash-stable, about/index.html and about/*.png:  split the splashes
+    up and made pngs and thumbnails.
+
+	* about/splash/README.splash, about/splash/gimp/*, about/splash/gimp-1.1/*,
+    about/splash/gimp-1.3/*: the original images from cvs and instructions on
+    how to get them.
+
 2002-11-25 carol <carol@gimp.org>
 
 	* about/splash.html,about/splash/*.png  and about/splash/*.txt:  added
