--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* about/splash-cvs.html, added the 1.3 versions of the splash.
 
+	* includes/urls_important.inc, added google to important urls.
+
 2002-11-26 scizzo <scizzo@gimp.org>
 
         * tutorials/Image_Map/: First port of the Image_Map tutorial.
