--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-11-27 carol <carol@gimp.org>
 
+	* includes/news.inc: pave the way to stop the web project with some fun
+    news items.  :)
+
+2002-11-27 carol <carol@gimp.org>
+
 	* about/index.html, about/*.png: cleaned up the splash images.
 
 	* about/splash-cvs.html, added the 1.3 versions of the splash.
