--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-12-06 scizzo <scizzo@gimp.org>
+
+        * tutorials/Lite_Quickies/: Add the first port of the GIMPLite
+        Quickies tutorial.
+
 2002-12-06 carol <carol@gimp.org>
 
 	* tutorials/Anti-Alias_Treshhold/, tutorials/Anti-Alias_Threshhold:
