Modified ChangeLog. Fixed one more thumbnail.
Modified ChangeLog.
Fixed one more thumbnail.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-12-06 scizzo <scizzo@gimp.org>
 
         * tutorials/Lite_Quickies/: Add the first port of the GIMPLite
-        Quickies tutorial.Fixed one wrong image.
+        Quickies tutorial.Fixed one wrong image. Fixed one more thumbnail.
 
 2002-12-06 carol <carol@gimp.org>
 
