--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
         * tutorials/index.html: Changed Channel Mixer to Color2BW.
 
         * tutorials/Color2BW/: Add the first port of the new BW tutorial.
+        Fixed a broken link.
 
 2002-12-07 carol <carol@gimp.org>
 
