Modified ChangeLog. Minor Fixes in the HTML.
Modified ChangeLog.
Minor Fixes in the HTML.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
         Fixed a broken link.
 
         * tutorials/Lite_Quickies/index.html: Add the original site to the
-        index file.
+        index file. Minor fixes in the HTML.
 
 2002-12-07 carol <carol@gimp.org>
 
