Modified ChangeLog. One more HTML fix.
Modified ChangeLog.
One more HTML fix.

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
         Fixed a broken link.
 
         * tutorials/Lite_Quickies/index.html: Add the original site to the
-        index file. Minor fixes in the HTML.
+        index file. Minor fixes in the HTML. One more fix in the HTML.
 
 2002-12-07 carol <carol@gimp.org>
 
