--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,13 @@
 2002-12-07 scizzo <scizzo@gimp.org>
 
+        * team.html: Add Atte André Jensen to the tutorial authors list.
+
+        * tutorials/Selective_Gaussian_Blur/: Add the first port of the
+        Selective Gaussian Blur tutorial.
+
         * tutorials/index.html: Changed Channel Mixer to Color2BW.
-        Removed Selection Overview.
+        Removed Selection Overview. Add CCD Noise removal to the list of
+        tutorials.
 
         * tutorials/Color2BW/: Add the first port of the new BW tutorial.
         Fixed a broken link.
