--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* bugs.html:  added.
 	* bugs/index.html:  removed.
+	* developer/index.html:  minor edit 
 
   Me and CVS had issues with these so i removed them:
 	* development/index.html, 
