--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-0 carol <carol@gimp.org>
+
+	* TODO.gnomecvs:  updated.
+
 2002-12-08 scizzo <scizzo@gimp.org>
 
         * tutorials/Smart_Sharpening/index.html: Fixed the links to the
