docs/plug-ins/: added style/default.css: added div.book-of-wilber :) images/wilberbook.jpg: added

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-12-19 carol <carol@gimp.org>
+
+	* docs/plug-ins/: added 
+
+	* style/default.css: added div.book-of-wilber :)
+
+	* images/wilberbook.jpg: added 
+
 2002-12-18 carol <carol@gimp.org>
 
 	* tutorials/Script_Image/: removed 
