--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-12-20 carol <carol@gimp.org>
 
+	* team.html: added a thank you to the previous web masters 
+
+002-12-20 carol <carol@gimp.org>
+
 	* team.html: put jtl's real name there for google to find!! 
 
 	* docs/index.html: reflected the new addition (doh)
