ls/Drawables/index.html: fixed author email addy.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2002-12-20 carol <carol@gimp.org>
 
+	* tutorials/Drawables/index.html: fixed author email addy. 
+
+2002-12-20 carol <carol@gimp.org>
+
 	* team.html: added a thank you to the previous web masters 
 
-002-12-20 carol <carol@gimp.org>
+2002-12-20 carol <carol@gimp.org>
 
 	* team.html: put jtl's real name there for google to find!! 
 
