Modified ChangeLog. Trying kbd out.
Modified ChangeLog.
Trying kbd out.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-22 scizzo <scizzo@gimp.org>
+
+        * tutorials/Creating_Icons/index.html: Trying out <kbd>
+
 2002-12-20 carol <carol@gimp.org>
 
 	* tutorials/Drawables/index.html: fixed author email addy. 
